--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -156,6 +156,7 @@
 	<msg mid="_ADD_NEW_SERVICE" value="_ADD_NEW_SERVICE" />
 	<msg mid="_ADD_SERVICE_TO_DEVICE" value="_ADD_SERVICE_TO_DEVICE" />
 	<msg mid="_ADD_SERVICE_TO_SERVICEGROUP" value="_ADD_SERVICE_TO_SERVICEGROUP" />
+	<msg mid="_ADD_STORAGE" value="_ADD_STORAGE" />
 	<msg mid="_ALERT" value="Alarma" />
   <msg mid="_ALERT_DESCRIPTION" value="_ALERT_DESCRIPTION" />
   <msg mid="_ALERT_LEVEL" value="Nivel de Alerta" />
@@ -299,6 +300,7 @@
 	<msg mid="_STATE" value="_STATE" />
 	<msg mid="_STATIC" value="Estatico" />
 	<msg mid="_STATISTIC_REPORTS" value="Statistic Reports" />
+	<msg mid="_STORAGES" value="_STORAGES" />
 	<msg mid="_STREET" value="_STREET" />
 	<msg mid="_SUPPORT_REQUEST" value="Solicitar Soporte" />
 	<msg mid="_SWAP_USAGE" value="Uso de Swap" />
@@ -352,6 +354,8 @@
     value="_DLG_DELETE_REPORT_MONTH" />
   <msg mid="_DLG_DELETE_REPORT_SCHEDULE"
     value="Estas seguro de que quieres borrar la planificacion del Informe '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_SEARCH_TEMPLATE"
+    value="_DLG_DELETE_SEARCH_TEMPLATE '%%arg1%%' '%%arg2%%' ?" />
   <msg mid="_DLG_DELETE_SERVICE"
     value="Estas seguro de que quieres borrar el Servicio '%%arg1%%' ?" />
   <msg mid="_DLG_DELETE_SERVICEGROUP"
