Services & Tables updates

--- a/usr/share/aat/Translations/EN.xml
+++ b/usr/share/aat/Translations/EN.xml
@@ -3,6 +3,7 @@
 	<msg mid="_ENGLISH" value="English" />
 	<msg mid="_FRENCH" value="French" />
 	<msg mid="_GERMAN" value="German" />
+	<msg mid="_ITALIAN" value="Italian" />
 	<msg mid="_PORTUGUESE" value="Portuguese" />
 	<msg mid="_RUSSIAN" value="Russian" />
 	<msg mid="_SPANISH" value="Spanish" />
