--- a/usr/share/aat/Translations/RU.xml
+++ b/usr/share/aat/Translations/RU.xml
@@ -3,6 +3,7 @@
 	<msg mid="_ENGLISH" value="Английский" />
 	<msg mid="_FRENCH" value="Французский" />
 	<msg mid="_GERMAN" value="Немецкий" />
+	<msg mid="_ITALIAN" value="_ITALIAN" />
 	<msg mid="_PORTUGUESE" value="Португальский" />
 	<msg mid="_RUSSIAN" value="_RUSSIAN" />
 	<msg mid="_SPANISH" value="Испанский" />
