--- a/usr/share/aat/Translations/FR.xml
+++ b/usr/share/aat/Translations/FR.xml
@@ -3,6 +3,7 @@
 	<msg mid="_ENGLISH" value="Anglais" />
   <msg mid="_FRENCH" value="Francais" />
   <msg mid="_GERMAN" value="Allemand" />
+	<msg mid="_ITALIAN" value="Italien" />
 	<msg mid="_PORTUGUESE" value="Portugais" />
 	<msg mid="_RUSSIAN" value="Russe" />
   <msg mid="_SPANISH" value="Espagnol" />
