--- a/usr/share/aat/Translations/PT.xml
+++ b/usr/share/aat/Translations/PT.xml
@@ -3,6 +3,7 @@
 	<msg mid="_ENGLISH" value="English" />
 	<msg mid="_FRENCH" value="French" />
 	<msg mid="_GERMAN" value="German" />
+	<msg mid="_ITALIAN" value="_ITALIAN" />
 	<msg mid="_PORTUGUESE" value="Português" />
 	<msg mid="_RUSSIAN" value="_RUSSIAN" />
 	<msg mid="_SPANISH" value="Spanish" />
