--- a/usr/share/aat/Translations/RU.xml
+++ b/usr/share/aat/Translations/RU.xml
@@ -282,6 +282,7 @@
   <msg mid="_RIGHTS" value="Права" />
   <msg mid="_ROLE" value="Роль" />
   <msg mid="_ROOM" value="Комната" />
+  <msg mid="_RUNNING_REPORTS" value="_RUNNING_REPORTS" />
 	<msg mid="_SAVE_AS_SEARCH_TEMPLATE" value="_SAVE_AS_SEARCH_TEMPLATE" />
   <msg mid="_SCHEDULE" value="Расписание" />
   <msg mid="_SCHEDULE_REPORT" value="Отчёт по планировщику" />
