--- a/usr/share/aat/Translations/FR.xml
+++ b/usr/share/aat/Translations/FR.xml
@@ -324,6 +324,7 @@
 	<msg mid="_USERS_BASE" value="Base Utilisateurs" />
   <msg mid="_USERS_FILTER" value="Filtre Utilisateurs" />
   <msg mid="_USERS_SERVER" value="Serveur Utilisateurs" />
+  <msg mid="_WORLD_STATISTICS" value="Statistiques Mondiales" />
 
 	<msg mid="_DLG_DELETE_ALERT"
     value="Voulez vous vraiment supprimer l'Alerte '%%arg1%%' ?" />
@@ -429,6 +430,8 @@
     value="Aucun Message défini pour le Service %s (version %s)" />
 	<msg mid="_MSG_NO_UPDATES_AVAILABLE"
     value="Pas de Mise à Jour Disponible" />
+  <msg mid="_MSG_OK_TO_SEND_DATA_TO_8PUSSY"
+    value="Je suis d'accord pour envoyer des données anonymes à 8pussy.org" />
 	<msg mid="_MSG_REACH_MAX_LINES"
     value="Maximum de %d lignes atteint!" />
 	<msg mid="_MSG_REPORT_DATA_SOURCE"
