--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -74,6 +74,8 @@
 	<msg mid="_BYTES" value="_BYTES" />
 	<msg mid="_CANCEL" value="Abbrechen" />
 	<msg mid="_CERTIFICATE" value="_CERTIFICATE" />
+  <msg mid="_COLUMNS" value="_COLUMNS" />
+  <msg mid="_COLUMNS_NAMES" value="_COLUMNS_NAMES" />
 	<msg mid="_COMMON_NAME" value="_COMMON_NAME" />
 	<msg mid="_CONFIG_FILE" value="Konfigurationsdatei" />
 	<msg mid="_DASHBOARD" value="_DASHBOARD" />
