--- a/usr/share/aat/Translations/EN.xml
+++ b/usr/share/aat/Translations/EN.xml
@@ -128,6 +128,7 @@
 	<msg mid="_EXPORT_MAIL" value="Mail Export" />
 	<msg mid="_EXPORT_SCP" value="SCP Export" />
 	<msg mid="_FIELD" value="Field" />
+	<msg mid="_FIELDS_OF_TABLE" value="Fields of Table" />
 	<msg mid="_FILE" value="File" />
 	<msg mid="_FILTER" value="Filter" />
 	<msg mid="_FIRSTNAME" value="Firstname" />
