--- a/usr/share/aat/Translations/IT.xml
+++ b/usr/share/aat/Translations/IT.xml
@@ -128,6 +128,7 @@
 	<msg mid="_EXPORT_MAIL" value="Mail Export" />
 	<msg mid="_EXPORT_SCP" value="SCP Export" />
 	<msg mid="_FIELD" value="Campo" />
+	<msg mid="_FIELDS_OF_TABLE" value="_FIELDS_OF_TABLE" />
 	<msg mid="_FILE" value="File" />
 	<msg mid="_FILTER" value="Filtro" />
 	<msg mid="_FIRSTNAME" value="Nome" />
