--- a/usr/share/aat/Translations/EN.xml
+++ b/usr/share/aat/Translations/EN.xml
@@ -218,6 +218,7 @@
   <msg mid="_LOGS_WIZARD" value="Logs Wizard" />
   <msg mid="_MAPS" value="Maps" />
   <msg mid="_MATCH" value="Match" />
+	<msg mid="_MAX_MINUTES_SEARCH" value="Max. number of minutes to search" />
 	<msg mid="_MAX_TIME_WITHOUT_LOG" value="Max. Time Without Log" />
   <msg mid="_MEM_USAGE" value="Memory Usage" />
   <msg mid="_MESSAGES" value="Messages" />
@@ -492,6 +493,8 @@
     value="Update Selected Tables" />
   <msg mid="_MSG_USER_ALREADY_EXISTS"
     value="User already exists !" />
+	<msg mid="_MSG_USER_CAN_ONLY_VIEW_N_MINUTES_LOGS"
+    value="Your user can only view %d minutes of logs" />
   <msg mid="_MSG_WIZARD_MSGS_LIST_LIMITED_TO"
     value="Wizard messages list limited to %d by default." />
 
