--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -215,6 +215,7 @@
 	<msg mid="_LOG_TYPE" value="Tipo de Log" />
 	<msg mid="_LOGROTATE" value="_LOGROTATE" />
 	<msg mid="_LOGS_VIEWER" value="Visor de Logs" />
+	<msg mid="_LOGS_AVAILABILITY" value="_Logs Availability" />
 	<msg mid="_LOGS_WIZARD" value="Asistente de Logs" />
 	<msg mid="_MAPS" value="Mapas" />
 	<msg mid="_MATCH" value="_MATCH" />
@@ -413,6 +414,8 @@
 		value="Has introducido un usuario/contrasenia erronea !" />
 	<msg mid="_MSG_INVALID_SCHEDULE_PERIOD"
     value="_MSG_INVALID_SCHEDULE_PERIOD" />
+	<msg mid="_MSG_LOGS_AVAILABILITY_FOR_DEVICE"
+    value="__LOGS availability for device %s (%s)" />
 	<msg mid="_MSG_MAIL_SENT_TO_SUPPORT"
 		value="Correo enviado al soporte de Octopussy." />
 	<msg mid="_MSG_MAP_CREATION_INFO"
