--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -214,6 +214,7 @@
 	<msg mid="_LOG_LEVEL" value="Log Stufe" />
 	<msg mid="_LOG_TYPE" value="Log Typ" />
 	<msg mid="_LOGROTATE" value="_LOGROTATE" />
+	<msg mid="_LOGS_AVAILABILITY" value="_Logs Availability" />
 	<msg mid="_LOGS_VIEWER" value="Anzeige Logs" />
 	<msg mid="_LOGS_WIZARD" value="Log Wizard" />
 	<msg mid="_MAPS" value="Darstellungen" />
@@ -413,6 +414,8 @@
 		value="Sie haben ein ungltiges Passwort angegeben" />
 	<msg mid="_MSG_INVALID_SCHEDULE_PERIOD"
     value="_MSG_INVALID_SCHEDULE_PERIOD" />
+	<msg mid="_MSG_LOGS_AVAILABILITY_FOR_DEVICE"
+    value="__LOGS availability for device %s (%s)" />
 	<msg mid="_MSG_MAIL_SENT_TO_SUPPORT"
 		value="Mail an Support gesendet." />
 	<msg mid="_MSG_MAP_CREATION_INFO"
