--- a/usr/share/aat/Translations/RU.xml
+++ b/usr/share/aat/Translations/RU.xml
@@ -214,6 +214,7 @@
   <msg mid="_LOG_LEVEL" value="Уровень лога" />
   <msg mid="_LOG_TYPE" value="Тип лога" />
   <msg mid="_LOGROTATE" value="Вращение лога" />
+	<msg mid="_LOGS_AVAILABILITY" value="_Logs Availability" />
   <msg mid="_LOGS_VIEWER" value="Просмотр логов" />
   <msg mid="_LOGS_WIZARD" value="Мастер логов" />
   <msg mid="_MAPS" value="Карты" />
@@ -413,6 +414,8 @@
 	  value="Вы ввели неправильный логин/пароль!" />
 	<msg mid="_MSG_INVALID_SCHEDULE_PERIOD"
     value="Вы ввели неправильный период для этого расписания!" />
+	<msg mid="_MSG_LOGS_AVAILABILITY_FOR_DEVICE"
+    value="__LOGS availability for device %s (%s)" />
   <msg mid="_MSG_MAIL_SENT_TO_SUPPORT"
     value="Письмо отправлено в поддержку Octopussy." />
   <msg mid="_MSG_MAP_CREATION_INFO"
