--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -415,7 +415,7 @@
 	<msg mid="_MSG_INVALID_SCHEDULE_PERIOD"
     value="Has introducido un periodo invalido para esta planificación !" />
 	<msg mid="_MSG_LOGS_AVAILABILITY_FOR_DEVICE"
-    value="__LOGS availability for device %s (%s)" />
+    value="__LOGS availability for device %s" />
 	<msg mid="_MSG_MAIL_SENT_TO_SUPPORT"
 		value="Correo enviado al soporte de Octopussy." />
 	<msg mid="_MSG_MAP_CREATION_INFO"
