--- a/usr/share/aat/Translations/RU.xml
+++ b/usr/share/aat/Translations/RU.xml
@@ -415,7 +415,7 @@
 	<msg mid="_MSG_INVALID_SCHEDULE_PERIOD"
     value="Вы ввели неправильный период для этого расписания!" />
 	<msg mid="_MSG_LOGS_AVAILABILITY_FOR_DEVICE"
-    value="__LOGS availability for device %s (%s)" />
+    value="__LOGS availability for device %s" />
   <msg mid="_MSG_MAIL_SENT_TO_SUPPORT"
     value="Письмо отправлено в поддержку Octopussy." />
   <msg mid="_MSG_MAP_CREATION_INFO"
